; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_verbs.c_mlx4_dealloc_mw.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_verbs.c_mlx4_dealloc_mw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_mw = type { i32 }
%struct.ibv_dealloc_mw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_dealloc_mw(%struct.ibv_mw* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ibv_mw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ibv_dealloc_mw, align 4
  store %struct.ibv_mw* %0, %struct.ibv_mw** %3, align 8
  %6 = load %struct.ibv_mw*, %struct.ibv_mw** %3, align 8
  %7 = call i32 @ibv_cmd_dealloc_mw(%struct.ibv_mw* %6, %struct.ibv_dealloc_mw* %5, i32 4)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.ibv_mw*, %struct.ibv_mw** %3, align 8
  %14 = call i32 @free(%struct.ibv_mw* %13)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %10
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @ibv_cmd_dealloc_mw(%struct.ibv_mw*, %struct.ibv_dealloc_mw*, i32) #1

declare dso_local i32 @free(%struct.ibv_mw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
